Bug 814272 - Cache the bounds of nsDisplayBackgroundImage items. r=roc a=blocking-basecamp