layout/base/nsDisplayList.h
@@ -1869,6 +1869,7 @@ protected:
                                   const nsRect& aClipRect,
                                   gfxRect* aDestRect);
   void ConfigureLayer(ImageLayer* aLayer);
+  nsRect GetBoundsInternal();
 
   // Cache the result of nsCSSRendering::FindBackground. Always null if
   // mIsThemed is true or if FindBackground returned false.
@@ -1876,6 +1877,8 @@ protected:
   /* If this background can be a simple image layer, we store the format here. */
   nsRefPtr<ImageContainer> mImageContainer;
   gfxRect mDestRect;
+  /* Bounds of this display item */
+  nsRect mBounds;
   uint32_t mLayer;
 
   nsITheme::Transparency mThemeTransparency;
